--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,16 @@
     <noscript>
       <strong>We're sorry but indetail doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <div id="app"></div>
+    <div id="app">
+      <div style="width: 100%; height: 100vh; display: table;">
+        <div style="text-align:center; vertical-align: middle; display: table-cell;">
+          <div style="" class="spinner-border" role="status">
+            <!-- <span class="sr-only">Loading...</span> -->
+          </div>
+          <p>Loading...</p>
+        </div>
+      </div>
+    </div>
     <!-- built files will be auto injected -->
   </body>
 </html>
